--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -6,5 +6,5 @@ author_profile: true
 ---
 
 {% for post in site.experiences reversed %}
-  {% include archive-single.html %}
+  {% include archive-single-experience.html %}
 {% endfor %}
