--- a/_pages/news.html
+++ b/_pages/news.html
@@ -5,6 +5,8 @@ permalink: /news/
 author_profile: true
 ---
 
+<p style="color: red; font-weight: bold; background-color: #fff0f0; padding: 10px; border-left: 4px solid red;">📢 I am always looking for collaborators. If you are interested in my work, please feel free to contact me to discuss potential collaboration opportunities!</p>
+
 {% for post in site.news reversed %}
   {% include archive-single-news.html %}
 {% endfor %}
