Fix SQD airport: Shangrao Sanqingshan

--- a/assets/maps/airports.html
+++ b/assets/maps/airports.html
@@ -46,7 +46,7 @@
             {code: "SHA", name: "Shanghai Hongqiao", lat: 31.1979, lng: 121.3363},
             {code: "SHE", name: "Shenyang Taoxian", lat: 41.6398, lng: 123.4834},
             {code: "SIN", name: "Singapore Changi", lat: 1.3644, lng: 103.9915},
-            {code: "SQD", name: "Sanming Shaxian", lat: 26.4263, lng: 117.8336},
+            {code: "SQD", name: "Shangrao Sanqingshan", lat: 28.3797, lng: 117.9643},
             {code: "SZX", name: "Shenzhen Bao'an", lat: 22.6393, lng: 113.8107},
             {code: "TAO", name: "Qingdao Jiaodong", lat: 36.2661, lng: 120.3744},
             {code: "TFU", name: "Chengdu Tianfu", lat: 30.3137, lng: 104.4451},
