--- a/assets/maps/cities.html
+++ b/assets/maps/cities.html
@@ -74,6 +74,7 @@
             {name: "长沙 Changsha", country: "China", lat: 28.2282, lng: 112.9388},
             {name: "焦作 Jiaozuo", country: "China", lat: 35.2159, lng: 113.2418},
             // West China
+            {name: "兰州 Lanzhou", country: "China", lat: 36.0611, lng: 103.8343},
             {name: "成都 Chengdu", country: "China", lat: 30.5728, lng: 104.0668},
             {name: "重庆 Chongqing", country: "China", lat: 29.4316, lng: 106.9123},
             {name: "宜昌 Yichang", country: "China", lat: 30.6918, lng: 111.2864},
