feat: add Deyang to cities list (58 cities total)

--- a/assets/maps/cities.html
+++ b/assets/maps/cities.html
@@ -76,6 +76,7 @@
             // West China
             {name: "兰州 Lanzhou", country: "China", lat: 36.0611, lng: 103.8343},
             {name: "成都 Chengdu", country: "China", lat: 30.5728, lng: 104.0668},
+            {name: "德阳 Deyang", country: "China", lat: 31.1279, lng: 104.3979},
             {name: "重庆 Chongqing", country: "China", lat: 29.4316, lng: 106.9123},
             {name: "宜昌 Yichang", country: "China", lat: 30.6918, lng: 111.2864},
             {name: "西安 Xi'an", country: "China", lat: 34.3416, lng: 108.9398},
