Add Wuxi to cities visited

--- a/assets/maps/cities.html
+++ b/assets/maps/cities.html
@@ -63,6 +63,7 @@
             {name: "南京 Nanjing", country: "China", lat: 32.0603, lng: 118.7969},
             {name: "杭州 Hangzhou", country: "China", lat: 30.2741, lng: 120.1551},
             {name: "苏州 Suzhou", country: "China", lat: 31.2989, lng: 120.5853},
+            {name: "无锡 Wuxi", country: "China", lat: 31.5747, lng: 120.2873},
             {name: "嘉兴 Jiaxing", country: "China", lat: 30.7522, lng: 120.7555},
             {name: "合肥 Hefei", country: "China", lat: 31.8206, lng: 117.2272},
             {name: "厦门 Xiamen", country: "China", lat: 24.4798, lng: 118.0894},
