Add bilingual language switching feature (中英文切换功能)
- Add language toggle button in navigation bar next to theme toggle
- Implement complete i18n translation system with localStorage
- Translate all main pages: Home, News, Publications, Experiences, Hobbies
- Translate navigation menu items and sidebar elements
- Add translation data for Chinese and English
- Auto-detect and persist language preference
- Add documentation for language switching feature

--- a/_pages/news.html
+++ b/_pages/news.html
@@ -1,11 +1,12 @@
 ---
 layout: archive
 title: "News"
+title_zh: "新闻"
 permalink: /news/
 author_profile: true
 ---
 
-<p style="color: red; font-weight: bold; background-color: #fff0f0; padding: 10px; border-left: 4px solid red;">📢 I am always looking for collaborators. If you are interested in my work, please feel free to contact me to discuss potential collaboration opportunities!</p>
+<p style="color: red; font-weight: bold; background-color: #fff0f0; padding: 10px; border-left: 4px solid red;" data-i18n-content="news-collaboration" data-i18n-content-zh="news-collaboration-zh">📢 I am always looking for collaborators. If you are interested in my work, please feel free to contact me to discuss potential collaboration opportunities!</p>
 
 {% for post in site.news reversed %}
   {% include archive-single-news.html %}
