--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,11 +1,12 @@
 ---
 layout: archive
 title: "Publications"
+title_zh: "出版物"
 permalink: /publications/
 author_profile: true
 ---
 
-<div class="wordwrap">I am very honored to work with some dedicated and talented collaborators.</div>
+<div class="wordwrap" data-i18n-content="publications-intro" data-i18n-content-zh="publications-intro-zh">I am very honored to work with some dedicated and talented collaborators.</div>
 
 {% include base_path %}
 
