--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -16,7 +16,7 @@ author_profile: true
   border: 1px solid #8B0000;
   color: #8B0000;
   background: #fff;
-  padding: 4px 8px;
+  padding: 4px 12px;
   border-radius: 4px;
   font-size: 12px;
   cursor: pointer;
@@ -29,9 +29,26 @@ author_profile: true
 .experience-summary {
   cursor: pointer;
   list-style: none;
+  padding: 8px 0;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 .experience-summary::-webkit-details-marker {
   display: none;
+}
+.experience-arrow {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-left: 6px solid #8B0000;
+  border-top: 4px solid transparent;
+  border-bottom: 4px solid transparent;
+  transition: transform 0.3s ease;
+  flex-shrink: 0;
+}
+details.experience-item[open] .experience-arrow {
+  transform: rotate(90deg);
 }
 .experience-title {
   font-weight: 700;
@@ -44,6 +61,7 @@ author_profile: true
 }
 .experience-content {
   margin-top: 8px;
+  padding-left: 20px;
 }
 </style>
 
@@ -53,22 +71,29 @@ document.addEventListener('DOMContentLoaded', function () {
   if (titleEl) {
     var controls = document.createElement('span');
     controls.className = 'experience-controls';
-    controls.innerHTML = '<button type="button" class="experience-toggle" data-action="expand">Expand all</button>' +
-                         '<button type="button" class="experience-toggle" data-action="collapse">Collapse all</button>';
+    controls.innerHTML = '<button type="button" class="experience-toggle" data-state="collapsed">Expand all</button>';
     titleEl.appendChild(controls);
   }
 
-  function setAll(open) {
+  var allCollapsed = true;
+
+  function toggleAll() {
+    allCollapsed = !allCollapsed;
     document.querySelectorAll('.experience-item').forEach(function (item) {
-      item.open = open;
+      item.open = !allCollapsed;
     });
+    var btn = document.querySelector('.experience-toggle');
+    if (btn) {
+      btn.textContent = allCollapsed ? 'Expand all' : 'Collapse all';
+      btn.setAttribute('data-state', allCollapsed ? 'collapsed' : 'expanded');
+    }
   }
 
   document.addEventListener('click', function (e) {
     var btn = e.target.closest('.experience-toggle');
-    if (!btn) return;
-    var action = btn.getAttribute('data-action');
-    setAll(action === 'expand');
+    if (btn) {
+      toggleAll();
+    }
   });
 });
 </script>
