--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -62,6 +62,14 @@ details.experience-item[open] .experience-arrow {
 .experience-content {
   margin-top: 8px;
   padding-left: 20px;
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+  transition: max-height 0.4s ease, opacity 0.3s ease, margin-top 0.3s ease;
+}
+details.experience-item[open] .experience-content {
+  max-height: 2000px;
+  opacity: 1;
 }
 </style>
 
